influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: influxdb
  name: influxdb
spec:
  type: LoadBalancer
  ports:
    - name: "8086"
      port: 8086
      targetPort: 8086
  selector:
    io.kompose.service: influxdb
